# flaresim_ae

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/lenses/flaresim_nuke/: manifest.json
assets/lenses/space55/: manifest.json
docs/: RELEASING.md  ae-sdk.md  build.md  ghost-reconstruction-breakdown.md  implementation-log.md  implementation.md  nuke-feature-sync.md  original-audit.md  original-flaresim-audit.md  spec.md
scripts/: generate_builtin_lenses.py
src/ae/: CMakeLists.txt  FlareSimAEPiPL.r  asset_root.cpp  asset_root.h  builtin_lenses.cpp  builtin_lenses.h  builtin_lenses_generated.inc  frame_bridge.cpp  frame_bridge.h  lens_resolution.cpp  lens_resolution.h  output_view.cpp  output_view.h  param_schema.cpp  param_schema.h  parameter_state.cpp  parameter_state.h  pixel_convert.cpp  pixel_convert.h  plugin_entry.cpp  plugin_entry.h  plugin_global_setup.cpp  plugin_gpu_render.cpp  plugin_params.cpp  plugin_sequence.cpp  plugin_smart_render.cpp  plugin_version.h  render_shared.cpp  render_shared.h
src/core/: bloom.cpp  bloom.h  ghost.cpp  ghost.h  image.h  lens.h  post_process.cpp  post_process.h  source_extract.cpp  source_extract.h  starburst.cpp  starburst.h  trace.cpp
src/cuda/: frame_cuda.cu  frame_cuda.h  frame_cuda_stub.cpp  ghost_cuda.cu  ghost_cuda.h  ghost_cuda_stub.cpp
src/runtime/: render_frame.cpp  render_frame.h
tests/: ae_smoke_test.jsx  core_smoke.cpp
